<resources>
    <string name="app_name">Book lend Admin</string>
    <string name="name">Name:</string>
    <string name="genre">Genre:</string>
    <string name="author">Author:</string>
    <string name="price">Price:</string>
    <string name="quantity">Quantity:</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>