<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:id="@+id/rl_book_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/ibt_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_back"
            android:onClick="onClick"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"/>
        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ibt_back"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="41sp"
            style="@style/app_name"
            tools:ignore="TextSizeCheck" />

        <ImageView
            android:id="@+id/iv_book_cover"
            android:layout_width="105dp"
            android:layout_height="150dp"
            android:layout_below="@+id/tv_app_name"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_app_name"
            android:layout_alignBaseline="@id/iv_book_cover"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/iv_book_cover"
            android:text="@string/name"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/tv_name_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_name"
            android:layout_toEndOf="@id/tv_quantity"
            android:layout_marginStart="5dp"
            android:text=""
            android:textSize="17sp"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name_info"
            android:layout_alignStart="@id/tv_name"
            android:text="@string/genre"
            android:layout_marginTop="5dp"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/tv_genre_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_genre"
            android:layout_alignStart="@id/tv_name_info"
            android:text=""
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/tv_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_genre_info"
            android:layout_alignStart="@id/tv_name"
            android:text="@string/author"
            android:layout_marginTop="5dp"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/tv_author_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_author"
            android:layout_alignStart="@id/tv_name_info"
            android:text=""
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_author_info"
            android:layout_alignStart="@id/tv_name"
            android:text="@string/price"
            android:layout_marginTop="5dp"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/tv_price_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_price"
            android:layout_alignStart="@id/tv_name_info"
            android:text=""
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/tv_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_price_info"
            android:layout_alignStart="@id/tv_name"
            android:text="@string/quantity"
            android:layout_marginTop="5dp"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/tv_quantity_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_quantity"
            android:layout_alignStart="@id/tv_name_info"
            android:text=""
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="15sp"
            android:layout_below="@id/iv_book_cover"
            android:layout_alignStart="@id/iv_book_cover"
            android:layout_marginTop="10dp"/>
        <Button
            android:id="@+id/bt_lend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_description"
            android:layout_alignEnd="@id/tv_description_info"
            android:layout_marginTop="5dp"
            android:text="@string/lend"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:background="@android:color/transparent"
            android:onClick="onClick"
            />
        <TextView
            android:id="@+id/tv_description_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_below="@id/bt_lend"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_alignStart="@id/tv_description"/>
        <TextView
            android:id="@+id/tv_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:textSize="15sp"
            android:layout_below="@id/tv_description_info"
            android:layout_alignStart="@id/tv_description"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/et_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_comment"
            android:layout_alignStart="@id/tv_description"
            android:layout_alignEnd="@id/tv_description_info"
            android:layout_marginTop="10dp"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
            android:inputType="textLongMessage" />
        <ListView
            android:id="@+id/lv_comment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/et_comment"
            android:layout_marginTop="10dp" />
    </RelativeLayout>
</ScrollView>