<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/item_rl_add_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ic_add_book"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_add_book"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck"/>
        <TextView
            android:id="@+id/tv_add_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_book"
            android:textColor="@color/black"
            android:textSize="20sp"
            style="@style/app_name"
            android:layout_alignTop="@id/ic_add_book"
            android:layout_toEndOf="@id/ic_add_book"
            android:layout_marginStart="15dp"/>
        <ImageView
            android:id="@+id/iv_book_cover"
            android:layout_width="170dp"
            android:layout_height="255dp"
            android:layout_below="@id/tv_add_book"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/up"
            android:contentDescription="Upload Image"
            tools:ignore="HardcodedText,ImageContrastCheck" />
        <TextView
            android:id="@+id/tv_book_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/et_book_name"
            android:layout_marginStart="10dp"
            android:text="@string/name"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/et_book_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_book_cover"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/tv_book_quantity"
            android:textSize="20sp"
            android:textAlignment="viewStart"
            android:autofillHints=""
            android:inputType="text"
            tools:ignore="LabelFor,VisualLintTextFieldSize,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        <TextView
            android:id="@+id/tv_book_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignTop="@id/sp_book_genre"
            android:layout_marginStart="10dp"
            android:text="@string/genre"
            android:textSize="20sp"/>

        <Spinner
            android:id="@+id/sp_book_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_book_name"
            android:layout_alignStart="@id/et_book_name"
            android:layout_marginTop="12dp"
            android:dropDownVerticalOffset="480dp"
            android:spinnerMode="dropdown"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        <TextView
            android:id="@+id/tv_book_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/et_book_author"
            android:layout_marginStart="10dp"
            android:text="@string/author"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/et_book_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sp_book_genre"
            android:layout_marginTop="11dp"
            android:layout_toEndOf="@id/tv_book_quantity"
            android:textSize="20sp"
            android:autofillHints=""
            android:inputType="text"
            tools:ignore="LabelFor,VisualLintTextFieldSize,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        <TextView
            android:id="@+id/tv_book_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/et_book_price"
            android:layout_marginStart="10dp"
            android:text="@string/price"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/et_book_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_book_author"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/tv_book_quantity"
            android:textSize="20sp"
            android:autofillHints=""
            android:inputType="numberDecimal"
            tools:ignore="LabelFor,VisualLintTextFieldSize,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        <TextView
            android:id="@+id/tv_book_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/et_book_quantity"
            android:layout_marginStart="10dp"
            android:text="@string/quantity"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/et_book_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_book_price"
            android:layout_marginTop="5dp"
            android:layout_alignStart="@id/et_book_name"
            android:textSize="20sp"
            android:autofillHints=""
            android:inputType="numberDecimal"
            tools:ignore="LabelFor,VisualLintTextFieldSize,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        <TextView
            android:id="@+id/tv_book_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_book_quantity"
            android:layout_alignStart="@id/tv_book_name"
            android:layout_marginTop="10dp"
            android:text="@string/description"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/et_book_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_book_description"
            android:layout_margin="8dp"
            android:background="@drawable/border"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:padding="5dp"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        <Button
            android:id="@+id/bt_add_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_book_description"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            android:layout_alignStart="@id/et_book_description"
            android:layout_alignEnd="@id/et_book_description"
            android:text="@string/add_book"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:background="@drawable/button_border"/>
        <com.google.android.material.bottomappbar.BottomAppBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bottom_app_bar"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/bt_add_book"
            android:layout_marginTop="5dp"
            app:fabCradleMargin="10dp"
            app:fabCradleRoundedCornerRadius="50dp"
            tools:ignore="BottomAppBar">
            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigationView"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginEnd="19dp"
                app:labelVisibilityMode="labeled"
                app:menu="@menu/bottom_menu"/>
        </com.google.android.material.bottomappbar.BottomAppBar>
    </RelativeLayout>
</ScrollView>